# novel

./: CMakeLists.txt  README.md  README.txt  package.xml
action/: CMakeLists.txt  README.md  package.xml
action/launch/: .complete_action_real.launch.swp  LIDAR_action_real.launch  LIDAR_action_sim.launch  action_node.launch  action_node_real.launch  amcl_demo.launch  complete_action_real.launch  complete_action_sim.launch  kinect_action_real.launch  kinect_action_sim.launch  kinect_amcl.launch.xml  move_base.launch.xml  view_navigation.launch
detect_aruco/: CMakeLists.txt  package.xml
detect_aruco/gazebo/models/marker0/meshes/: Marker0.dae
detect_aruco/gazebo/models/marker11/: model-1_5.sdf
detect_aruco/gazebo/models/marker13/: model-1_4.sdf
detect_aruco/gazebo/models/marker14/: model.sdf
detect_aruco/gazebo/models/marker16/: model.sdf
detect_aruco/gazebo/models/marker17/: model-1_5.sdf  model.sdf
detect_aruco/gazebo/models/marker2/: model-1_5.sdf  model.sdf
detect_aruco/gazebo/models/marker3/: model-1_4.sdf
detect_aruco/gazebo/models/marker4/: model.sdf
detect_aruco/gazebo/models/marker5/: model-1_4.sdf  model.sdf
detect_aruco/gazebo/models/marker6/: model-1_4.sdf
detect_aruco/gazebo/models/marker8/: model-1_5.sdf  model.sdf
detect_aruco/gazebo/models/marker9/: model-1_4.sdf
detect_aruco/gazebo/worlds/: AR.world
detect_aruco/launch/: .kinect_alvar.launch.swp  aruco_detect.launch  kinect_alvar.launch  kinect_alvar_real.launch  rviz_bringup.launch
detect_aruco/rviz/: aruco_test_env.rviz
detect_aruco/src/: .detect_marker.cpp.swp  aruco_detect.cpp  detect_marker.cpp
expected_scan_generator/: CMakeLists.txt
maps/: 9e_suite.pgm  9e_suite.yaml  hacker_full.pgm  hacker_full.yaml  hackerman_auditorium.pgm  hackerman_auditorium.yaml  hackerman_basement.pgm  hackerman_basement.yaml  hackerman_hallway_raph.pgm  hackerman_hallway_raph.yaml  hackerman_vending-5_9.pgm  hackerman_vending-5_9.yaml  hodson_210.pgm  hodson_210.yaml  inside_B08F.yaml  marins_pod.pgm  marins_pod.yaml  outside_B08C.pgm  outside_B08C.yaml  outside_B08E.pgm  outside_B08E.yaml  outside_b17.pgm  outside_b17.yaml
novel_bringup/: CMakeLists.txt  package.xml
novel_gazebo/: CMakeLists.txt  package.xml
novel_lidar_detection/: CMakeLists.txt  novel_objects_filter.cpp  package.xml  setup.py
novel_msgs/: CMakeLists.txt
realsense_aruco_test/: CMakeLists.txt  package.xml
(+68 files in other folders)
